--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,22 @@
     margin: 0;
 }
 
+body {
+    background-color: whitesmoke;
+}
+
+.app {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .app__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.app__stats {
+    display: flex;
+    justify-content: space-around;
 }
