한국어로 수정

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,15 @@
     margin: 0;
 }
 
+
 body {
     background-color: whitesmoke;
+}
+
+h1 {
+    color: #602f0c;
+    font-size: 2.5rem;
+    padding: 1rem;
 }
 
 .app {
